--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <title>React.js Boilerplate</title>
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption" rel="stylesheet">
   </head>
   <body>
     <!-- Display a message if JS has been disabled on the browser. -->
